--- a/index.html
+++ b/index.html
@@ -9,41 +9,45 @@
     </nav>
   </head>
   <body>
+
     <div id="radio">
       <h1 class="h1">V E R Y NICE<h1>
       <em><h5 class="h3">"Compendium of Cool: An Ethnography of Equanimity"</h5></em>
 
       <p>Exploring the depths of music, culture, aesthetics and philosophy in pursuit of equanimity.<br />
-         Simply put, we're here to help you find your <em>cool</em></p>
+         Produced by smn.phx and friends
 
 
-        <div class="box">
+        <p>
           <img src="./resources/images/covers/VN015.gif" />
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-017%2F" frameborder="0" ></iframe>
-        </div>
+          <iframe width="70%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-017%2F" frameborder="0" ></iframe>
+        </p>
 
-        <div class="box">
+        <p>
           <img src="./resources/images/covers/VN014.gif" />
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-014-ft-dj-izm-izm909%2F" frameborder="0" ></iframe>
-        </div>
+          <iframe width="70%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-014-ft-dj-izm-izm909%2F" frameborder="0" ></iframe>
+        </p>
 
-        <div class="box">
+        <p>
           <img src="./resources/images/covers/VN013.gif" />
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-013-ft-sir-sampha-jonwayne-dram-dom-kennedy-bj-the-chicago-kid-more%2F" frameborder="0" ></iframe>
-        </div>
+          <iframe width="70%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-013-ft-sir-sampha-jonwayne-dram-dom-kennedy-bj-the-chicago-kid-more%2F" frameborder="0" ></iframe>
+        </p>
 
-        <div class="box">
+        <p>
           <img src="./resources/images/covers/VN012.gif" />
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-012-v-e-r-y-nice-work%2F" frameborder="0" ></iframe>
-        </div>
+          <iframe width="70%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-012-v-e-r-y-nice-work%2F" frameborder="0" ></iframe>
+        </p>
 
-        <div class="box">
+        <p>
           <img src="./resources/images/covers/VN011.gif" />
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-011-ft-naji-sevdaliza-junglepussy-young-fathers-jay-electronica-many-more%2F" frameborder="0" ></iframe>
-        </div>
+          <iframe width="70%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-011-ft-naji-sevdaliza-junglepussy-young-fathers-jay-electronica-many-more%2F" frameborder="0" ></iframe>
+        </p>
 
-      <img src="./resources/images/covers/VN010.gif" />
-      <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-010-ft-tuamie-curbside-jones-hako-yamasaki-mach-hommy-ryo-fukui-j-cole%2F" frameborder="0" ></iframe>
+        <p>
+          <img src="./resources/images/covers/VN010.gif" />
+          <iframe width="70%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fsmnphx%2Fv-e-r-y-nice-010-ft-tuamie-curbside-jones-hako-yamasaki-mach-hommy-ryo-fukui-j-cole%2F" frameborder="0" ></iframe>
+        </p>
+
       <p> Listen to VOLUMES 1-10 <a href="https://www.mixcloud.com/smnphx/">here</a>.</p>
     </div>
 
